--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 #headerNav{
     position: fixed;
     width: 90%;
-    background: #fff;
+    background: #ffffff;
     color:#ffff;
     border-bottom: 2px solid #ccc;
+    margin-bottom: 50px;
 
 }
 #logo{
@@ -27,12 +28,62 @@ nav{
 nav a{
     display: inline-block;
     text-decoration: none;
-    border-left: 1px solid black;
+    border-left: 1px solid #cccccc;
     padding-left: 15px;
     margin-left: 15px;
     line-height: 15px;
-
+    color: #cccccc;
 }
 nav a:first-child{
     border-left: 0 none;
+}
+#portfolio{
+    color:#4aaaa5;
+}
+h1{
+    clear: both;
+    color: #4aaaa5;
+}
+
+#Portfolio{
+    background:#ffffff;
+    font-size: 18px;
+    padding-top: 20px;
+    margin-top: 75px;
+    border-bottom: 2px solid #ccc;
+}
+
+#image1{
+    padding-top: 20px;
+    float: left;
+    margin-right: 20px;
+}
+
+#image2{
+    padding-top: 20px;
+
+}
+
+#image3{
+    float: left;
+}
+
+#footer{
+    clear: both;
+    text-align: center;
+}
+
+.wrapper{
+    width: 960px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 100px;
+    margin-left: 100px;
+    background:white;
+    height: 600px;
+}
+
+#pagecontainer{
+    background:white;
+    width: 1060px;
 }
